--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -36,7 +36,7 @@ dubbo.app.name=wechat-consumer
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
 
-#############################################支付相关-start#############################################
+# 支付宝相关 -  start
 notify.domain=http://test-wx.ixincheng.com
 #支付宝配置
 alipay.app.id=2017072807932656
@@ -46,8 +46,10 @@ alipay.url=https://openapi.alipay.com/gateway.do
 
 alipay.notify_url=xxx
 alipay.return_url=xxx
+# 支付宝相关 -   end
 
 
+# 微信相关 -  start
 #证书
 wechatpay.cert.path=/certs/apiclient_cert.p12
 # 微信h5、公众号
@@ -60,33 +62,23 @@ wechatpay.app.appid=wx08ebfb656b0e2653
 wechatpay.app.mchid=1490043762
 wechatpay.app.apiKey=AeVSz8PM3a0tlgKj4MgxiZAK1dDz1nXO
 #wechatpay.appSecret=ffcf9b55181e4353b2fbeb7ed33f2224
-#############################################支付相关-end#############################################
+
 # 公众号appsecret
 wechatpay.appid4name=熊猫中医
 #可用户     第三发登录，获取第三用户信息使用
 wechatpay.gzhSecret=df2206fd380c36389ceccec9e8ac8f5c
 wxToken=xxxxxxxxxxxxxxxx
 
-returnOpenidUri=http://test-wx.ixincheng.com
-returnCodeUri=http://test-wx.ixincheng.com
+# 微信相关 -  end
 
+
+returnOpenidUri=http://test-wx.ixincheng.com
 webdomain=http://test-www.ixincheng.com
 #服务器ip 微信支付使用
 server_ip=47.92.25.236
 
-#杨宣新增  本地测试
-tokenFilter=http://test-wx.ixincheng.com/bxg/bs/checkToken
-#线上域名
-#tokenFilter=http://test-wx.ixincheng.com
 
-
-
-
-#网站接口地址
-online.weburl=http://test-www.ixincheng.com
-#在线接口key（测试环境）,做对称加密用的
-onlinekey=ourwelkjlkferidflkj
-
+# 发送礼物配置
 gift.im.host=47.92.25.236
 gift.im.port=5222
 gift.im.system.account=2@47.92.25.236
@@ -96,23 +88,7 @@ gift.im.room.postfix=test-xczh@conference.47.92.25.236
 gift.im.boshService=http://47.92.25.236:5280/http-bind/
 
 
-#熊猫币比例
-rate=10
-#最低充值金额：10元
-minimum_amount=0.01
-
-
-iphone.iap.url=https://sandbox.itunes.apple.com/verifyReceipt
-iphone.version=1.0.1
-# 初始化默认的名称
-initialize.names=人参,人发,卜芥,儿茶,八角,丁香,刀豆,三七,三棱,干姜,干漆,广白,广角,广丹,大黄,大戟,大枣,大蒜,大蓟,小蓟,小麦,小蘖
-
-#即将直播的预热  多长时间    单位小时
-live.preheating=24
-
-
 ##  微博   第三方配置信息
-
 client_ID=3775566632
 client_SERCRET=f3e74de98e29f5af6737d3c3a489b456
 redirect_URI=http://test-wx.ixincheng.com/xczh/weibo/evokeWeiBoRedirect
@@ -123,14 +99,9 @@ authorizeURL=https://api.weibo.com/oauth2/authorize
 pc.authorizeURL=https://api.weibo.com/oauth2/authorize
 #	手机网站使用
 mobile.authorizeURL=https://open.weibo.cn/oauth2/authorize
-
 rmURL=https://rm.api.weibo.com/2/
 
-# 上传到附件中的url-->
-attachmentCenterPath=http://172.26.108.181:38080/
-
-
-
+# redis 配置
 redis.host=redis-server
 #redis端口，成都(182.48.112.83)写56379，北京(172.16.1.18)写6379
 redis.port=6379
@@ -147,6 +118,16 @@ email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
 email.password=Ixincheng1234
 
+#cookie配置
 env.flag=test
 cookieTokenName=_uc_t_
 domain=ixincheng.com
+
+#熊猫币比例
+rate=10
+#最低充值金额：10元
+minimum_amount=0.01
+
+#  审核中时也应该用 沙盒环境，如果审核成功，用户可以下载的时候，就可以换成真实的啦
+#iphone.iap.url=https://sandbox.itunes.apple.com/verifyReceipt
+iphone.iap.url=https://sandbox.itunes.apple.com/verifyReceipt
