--- a/pc/online-web/src/main/resources/env-dev/config.properties
+++ b/pc/online-web/src/main/resources/env-dev/config.properties
@@ -1,10 +1,10 @@
 ﻿#++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-#jdbc.password=root
-jdbc.password=D1a6t8As34iEc7oweo3Dnf
+jdbc.password=root
+#jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #c3p0连接池配置：
 #池内最小连接数
