--- a/wechat/src/main/webapp/WEB-INF/web.xml
+++ b/wechat/src/main/webapp/WEB-INF/web.xml
@@ -55,17 +55,29 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>-->
 
-	<!-- 我的拦截器 -->
+	<!-- 我的拦截器  拦截  ajax请求 -->
 	<filter>
 		<filter-name>TokenFilter</filter-name>
 		<filter-class>com.xczh.consumer.market.filter.TokenFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>TokenFilter</filter-name>
-		<url-pattern>/bxg/*</url-pattern>
+		<!--  老接口  -->
+	    <url-pattern>/bxg/*</url-pattern>
+	    <!--  新接口  -->
 		<url-pattern>/xczh/*</url-pattern>
 	</filter-mapping>
 
+	<!-- 拦截静态资源  -->
+	<filter>
+		<filter-name>PageVisitFilter</filter-name>
+		<filter-class>com.xczh.consumer.market.filter.PageVisitFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>PageVisitFilter</filter-name>
+		<!-- html、js、css 静态资源  -->
+		<url-pattern>/xcview/*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
