--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -25,7 +25,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.xczhihui</groupId>
-			<artifactId>user-center-api</artifactId>
+			<artifactId>user-api</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -273,9 +273,19 @@
 		    <artifactId>emoji-java</artifactId>
 		    <version>4.0.0</version>
 		</dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<classifier>jdk15</classifier>
+		</dependency>
 
 
-    </dependencies>
+	</dependencies>
 	<!-- <build> <finalName>ROOT</finalName> </build> -->
 	<profiles>
 		<profile>
