--- a/pc/online-manager/pom.xml
+++ b/pc/online-manager/pom.xml
@@ -33,6 +33,12 @@
 
         <dependency>
             <groupId>com.xczhihui</groupId>
+            <artifactId>user-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xczhihui</groupId>
             <artifactId>online-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
@@ -206,7 +212,11 @@
             <artifactId>quartz</artifactId>
             <version>2.3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <classifier>jdk15</classifier>
+        </dependency>
     </dependencies>
 
 
