--- a/pc/online-manager/pom.xml
+++ b/pc/online-manager/pom.xml
@@ -33,7 +33,7 @@
 
         <dependency>
             <groupId>com.xczhihui</groupId>
-            <artifactId>user-api</artifactId>
+            <artifactId>user-center-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
