--- a/pc/online-web/pom.xml
+++ b/pc/online-web/pom.xml
@@ -40,7 +40,7 @@
         </dependency>
         <dependency>
             <groupId>com.xczhihui</groupId>
-            <artifactId>user-api</artifactId>
+            <artifactId>user-center-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
