--- a/pc/parent-pom/pom.xml
+++ b/pc/parent-pom/pom.xml
@@ -27,7 +27,7 @@
     <!-- 待聚合模块 -->
     <modules>
         <module>../common-exception</module>
-        <module>../user-api</module>
+        <module>../user-center-api</module>
         <module>../common-util</module>
         <module>../common-support</module>
         <module>../common-pay</module>
