--- a/pc/user-center-provider/pom.xml
+++ b/pc/user-center-provider/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xczhihui</groupId>
-	<artifactId>user-provider</artifactId>
+	<artifactId>user-center-provider</artifactId>
 	<packaging>war</packaging>
 	<version>2.0.0-SNAPSHOT</version>
 
@@ -32,7 +32,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.xczhihui</groupId>
-			<artifactId>user-api</artifactId>
+			<artifactId>user-center-api</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 
