--- a/pc/user-center-provider/src/main/resources/env-dev-local/config.properties
+++ b/pc/user-center-provider/src/main/resources/env-dev-local/config.properties
@@ -1,17 +1,20 @@
-#++++++++++++++++++++++++++++++++++++++++++++++生产环境++++++++++++++++++++++++++++++++++++++++++++++
+#++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-8vb0kxo5629p1f405.mysql.zhangbei.rds.aliyuncs.com:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-jdbc.username=ixincheng
-jdbc.password=D1a6t8As34iEc7oweo3Dnf
+#jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=root
+
+#jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
 dubbo.zookepper.url=zookepper-server:2080
 #提供方的ip或者host
 dubbo.protocol.host=127.0.0.1
 #应用名称
-dubbo.app.name=medical-provider
+dubbo.app.name=user-provider
 #提供服务的端口
-dubbo.protocol.port=50883
+dubbo.protocol.port=50881
 #设置duboo超时时间
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
@@ -35,3 +38,6 @@ cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 #CC播放器ID
 cc.player.id=E92940E0788E2DAE
+
+cookieTokenName=_uc_t_
+domain=ixincheng.com
