--- a/pc/user-center-provider/src/main/resources/env-test/config.properties
+++ b/pc/user-center-provider/src/main/resources/env-test/config.properties
@@ -1,20 +1,17 @@
-#++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
+#++++++++++++++++++++++++++++++++++++++++++++++测试环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://172.26.108.182:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-jdbc.password=root
-
-#jdbc.password=D1a6t8As34iEc7oweo3Dnf
+jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
 dubbo.zookepper.url=zookepper-server:2080
 #提供方的ip或者host
 dubbo.protocol.host=127.0.0.1
 #应用名称
-dubbo.app.name=medical-provider
+dubbo.app.name=user-provider
 #提供服务的端口
-dubbo.protocol.port=50883
+dubbo.protocol.port=50881
 #设置duboo超时时间
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
@@ -38,3 +35,6 @@ cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 #CC播放器ID
 cc.player.id=E92940E0788E2DAE
+
+cookieTokenName=_uc_t_
+domain=ixincheng.com
