--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -25,7 +25,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.xczhihui</groupId>
-			<artifactId>user-api</artifactId>
+			<artifactId>user-center-api</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
