修改微信端的域名配置

--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -121,7 +121,7 @@ email.password=Ixincheng1234
 #cookie配置
 env.flag=test
 cookieTokenName=_uc_t_
-domain=ixincheng.com
+domain=xczhihui.com
 
 #熊猫币比例
 rate=10
