[feature]消息结构改版

--- a/course-provider/src/main/resources/env-dev/config.properties
+++ b/course-provider/src/main/resources/env-dev/config.properties
@@ -33,6 +33,7 @@ reids.timeout=20000
 #密码
 redis.password=xczh_redis_prod
 
-
-
 rate=10
+
+wx.appid=wx48d230a99f1c20d9
+wx.secret=df2206fd380c36389ceccec9e8ac8f5c
