--- a/pc/online-manager/pom.xml
+++ b/pc/online-manager/pom.xml
@@ -39,6 +39,12 @@
 
         <dependency>
             <groupId>com.xczhihui</groupId>
+            <artifactId>course-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xczhihui</groupId>
             <artifactId>user-center-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
