--- a/pc/online-manager/src/main/resources/env-dev/config.properties
+++ b/pc/online-manager/src/main/resources/env-dev/config.properties
@@ -59,3 +59,31 @@ web.url=http://dev.ixincheng.com
 env.flag=dev
 domain=ixincheng.com
 cookieTokenName=_uc_t_manager_dev
+
+#编号${orderNo}提现申请已通过审核,1-3个工作日内发放成功！~
+sms.enhashment.pass.code=
+#编号${orderNo}提现申请已通过审核并打款，72小时内到账，请注意查收~
+sms.enhashment.grant.code=
+#编号${orderNo}提现申请已被驳回，驳回原因：${reason}
+sms.enhashment.notPass.code=
+
+#您申请的直播课程《${courseName}》已通过系统审核，您可登录www.ipandatcm.com中主播工作台进行直播
+sms.live.course.apply.pass.code=
+#您申请的${type}课程《${courseName}》已通过系统审核，可以上架啦！您可登录www.ipandatcm.com中主播工作台进行操作
+sms.not.live.course.apply.pass.code=
+#您申请的${type}课程《${courseName}》未通过系统审核，原因：${reason}。如有疑问请联系客服0898-32881833。
+sms.course.apply.not.pass.code=
+
+#您的${type}申请已于${date}通过认证，现在您已经是一名主播了，快去发布课程吧~如需帮助请联系客服0898-32881833。
+sms.anchor.approve.pass.code=1
+#您的${type}认证未能通过，原因: ${reason}，如有疑问请联系客服0898-32881833。
+sms.anchor.approve.notPass.code=1
+
+#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。
+sms.live.course.remind.code=1
+#您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
+sms.offline.course.remind.code=1
+
+weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
+weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
