--- a/pc/parent-pom/pom.xml
+++ b/pc/parent-pom/pom.xml
@@ -247,6 +247,13 @@
                 <version>2.2</version>
             </dependency>
 
+            <!-- cache -->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>2.5.2</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
