[feature]pc与移动端消息接口

--- a/pc/online-web/src/main/resources/env-dev-local/config.properties
+++ b/pc/online-web/src/main/resources/env-dev-local/config.properties
@@ -98,3 +98,5 @@ web.url=http://dev.ixincheng.com
 domain=ixincheng.com
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_dev
+
+weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
