--- a/pc/online-web/src/main/resources/env-prod/config.properties
+++ b/pc/online-web/src/main/resources/env-prod/config.properties
@@ -98,3 +98,5 @@ domain=ipandatcm.com
 env.flag=prod
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t
+
+weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
