--- a/pc/online-web/src/main/resources/env-test/config.properties
+++ b/pc/online-web/src/main/resources/env-test/config.properties
@@ -99,3 +99,5 @@ domain=ixincheng.com
 env.flag=test
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_test
+
+weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
