--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -32,5 +32,7 @@ redis.password=xczh_redis_prod
 
 rate=10
 
-wx.appid=wxf1f3c13da2fae87b
+wx.appId=wxf1f3c13da2fae87b
 wx.secret=b17cdd54ce4c35420a9e7782d7a27fa7
+
+mobile.domain=http://m.ipandatcm.com
