测试环境配置文件修改

--- a/pc/online-web/src/main/resources/env-test/config.properties
+++ b/pc/online-web/src/main/resources/env-test/config.properties
@@ -95,7 +95,7 @@ qiniu.bucket=test
 #熊猫币比例
 rate=10
 web.url=http://test-www.ixincheng.com
-domain=ixincheng.com
+domain=xczhihui.com
 env.flag=test
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_test
