[bug fix]fix 消息推送模板bug 以及 文案修改

--- a/pc/online-manager/src/main/resources/env-prod/config.properties
+++ b/pc/online-manager/src/main/resources/env-prod/config.properties
@@ -83,6 +83,8 @@ sms.anchor.approve.notPass.code=SMS_135036642
 sms.live.course.remind.code=SMS_135041922
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
+#您的专辑课程《${courseName}》需要更新啦~您可登录www.ipandatcm.com中主播工作台进行操作
+sms.update.course.remind.code=sms.update.course.remind.code
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
