--- a/pc/online-web/src/main/resources/env-dev/config.properties
+++ b/pc/online-web/src/main/resources/env-dev/config.properties
@@ -101,3 +101,4 @@ email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_dev
 
 weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
+weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
