增加学堂课程列表页的动态效果

--- a/pc/online-web/src/main/resources/env-dev/config.properties
+++ b/pc/online-web/src/main/resources/env-dev/config.properties
@@ -95,7 +95,7 @@ env.flag=dev
 
 #熊猫币比例
 rate=10
-web.url=http://dev.ixincheng.com
+web.url=http://dev.ixincheng.com:10086
 domain=ixincheng.com
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_dev
