[feature]信鸽推送接入以及优化遗留代码注入方式

--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -36,3 +36,10 @@ wx.appId=wxf1f3c13da2fae87b
 wx.secret=b17cdd54ce4c35420a9e7782d7a27fa7
 
 mobile.domain=http://m.ipandatcm.com
+
+push.android.accessId=2100292685
+push.android.secretKey=5a2f2710e41d9eda7e5a555c4435d533
+push.ios.accessId=2200293451
+push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
+
+env.flag=prod
