--- a/course-provider/src/main/resources/env-test/config.properties
+++ b/course-provider/src/main/resources/env-test/config.properties
@@ -36,3 +36,10 @@ wx.appId=wx48d230a99f1c20d9
 wx.secret=df2206fd380c36389ceccec9e8ac8f5c
 
 mobile.domain=http://test-wx.ixincheng.com
+
+push.android.accessId=2100292685
+push.android.secretKey=5a2f2710e41d9eda7e5a555c4435d533
+push.ios.accessId=2200293451
+push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
+
+env.flag=test
