--- a/pc/online-manager/src/main/resources/env-dev/config.properties
+++ b/pc/online-manager/src/main/resources/env-dev/config.properties
@@ -65,23 +65,23 @@ cookieTokenName=_uc_t_manager_dev
 sms.enhashment.pass.code=
 #编号${orderNo}提现申请已通过审核并打款，72小时内到账，请注意查收~
 sms.enhashment.grant.code=
-#编号${orderNo}提现申请已被驳回，驳回原因：${reason}
-sms.enhashment.notPass.code=SMS_135036649
+#编号${orderNo}提现申请已被驳回，驳回原因：${reason} 备注: ${remark}
+sms.enhashment.notPass.code=SMS_135029156
 
 #您申请的直播课程《${courseName}》已通过系统审核，您可登录www.ipandatcm.com中主播工作台进行直播
 sms.live.course.apply.pass.code=SMS_135031681
 #您申请的${type}课程《${courseName}》已通过系统审核，可以上架啦！您可登录www.ipandatcm.com中主播工作台进行操作
 sms.not.live.course.apply.pass.code=SMS_135036647
-#您申请的${type}课程《${courseName}》未通过系统审核，原因：${reason}。如有疑问请联系客服0898-32881833。
+#您申请的${type}课程《${courseName}》未通过系统审核，原因：${reason} 备注: ${remark}。如有疑问请联系客服0898-32881833。
 sms.course.apply.not.pass.code=SMS_135036646
 
 #您的${type}申请已于${date}通过认证，现在您已经是一名主播了，快去发布课程吧~如需帮助请联系客服0898-32881833。
 sms.anchor.approve.pass.code=SMS_135036643
 #您的${type}认证未能通过，原因: ${reason}，如有疑问请联系客服0898-32881833。
-sms.anchor.approve.notPass.code=SMS_135036642
+sms.anchor.approve.notPass.code=SMS_135038985
 
-#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。
-sms.live.course.remind.code=SMS_135041922
+#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。点击http://test-wx.xczhihui.com/..../${url}进入课程
+sms.live.course.remind.code=SMS_135029124
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
 #您的专辑课程《${courseName}》需要更新啦~您可登录www.ipandatcm.com中主播工作台进行操作
@@ -89,3 +89,11 @@ sms.update.course.remind.code=sms.update.course.remind.code
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+
+weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
+weixin.course.apply.not.pass.code=HQvCPVxmHhHfpNYI3CxNPOGiyx2tQjCEOsbL-B-j6J8
+
+weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
+weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
+
+weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
