[enhancement]修改消息模板

--- a/pc/online-manager/src/main/resources/env-prod/config.properties
+++ b/pc/online-manager/src/main/resources/env-prod/config.properties
@@ -61,11 +61,11 @@ domain=ipandatcm.com
 cookieTokenName=_uc_t_manager
 
 #编号${orderNo}提现申请已通过审核,1-3个工作日内发放成功！~
-sms.enhashment.pass.code=
+sms.enhashment.pass.code=SMS_135041785
 #编号${orderNo}提现申请已通过审核并打款，72小时内到账，请注意查收~
-sms.enhashment.grant.code=
-#编号${orderNo}提现申请已被驳回，驳回原因：${reason} 备注: ${remark}
-sms.enhashment.notPass.code=SMS_135029156
+sms.enhashment.grant.code=SMS_135026928
+#编号${orderNo}提现申请已被驳回，驳回原因：${reason}
+sms.enhashment.notPass.code=SMS_135034049
 
 #您申请的直播课程《${courseName}》已通过系统审核，您可登录www.ipandatcm.com中主播工作台进行直播
 sms.live.course.apply.pass.code=SMS_135031681
@@ -88,7 +88,6 @@ sms.update.course.remind.code=sms.update.course.remind.code
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
-weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
 
 weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
 weixin.course.apply.not.pass.code=HQvCPVxmHhHfpNYI3CxNPOGiyx2tQjCEOsbL-B-j6J8
