--- a/pc/online-manager/src/main/resources/env-test/config.properties
+++ b/pc/online-manager/src/main/resources/env-test/config.properties
@@ -61,11 +61,11 @@ domain=ixincheng.com
 cookieTokenName=_uc_t_manager_test
 
 #编号${orderNo}提现申请已通过审核,1-3个工作日内发放成功！~
-sms.enhashment.pass.code=
+sms.enhashment.pass.code=SMS_135041785
 #编号${orderNo}提现申请已通过审核并打款，72小时内到账，请注意查收~
-sms.enhashment.grant.code=
-#编号${orderNo}提现申请已被驳回，驳回原因：${reason} 备注:${remark}
-sms.enhashment.notPass.code=SMS_135029156
+sms.enhashment.grant.code=SMS_135026928
+#编号${orderNo}提现申请已被驳回，驳回原因：${reason}
+sms.enhashment.notPass.code=SMS_135034049
 
 #您申请的直播课程《${courseName}》已通过系统审核，您可登录www.ipandatcm.com中主播工作台进行直播
 sms.live.course.apply.pass.code=SMS_135031681
@@ -79,8 +79,8 @@ sms.anchor.approve.pass.code=SMS_135036643
 #您的${type}认证未能通过，原因: ${reason}，如有疑问请联系客服0898-32881833。
 sms.anchor.approve.notPass.code=SMS_135038985
 
-#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。点击http://test-wx.xczhihui.com/${url}进入课程
-sms.live.course.remind.code=SMS_135029124
+#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。点击http://test-wx.xczhihui.com/${code}进入课程
+sms.live.course.remind.code=SMS_135029198
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
 #您的专辑课程《${courseName}》需要更新啦~您可登录www.ipandatcm.com中主播工作台进行操作
