--- a/pc/online-web/src/main/resources/env-prod/config.properties
+++ b/pc/online-web/src/main/resources/env-prod/config.properties
@@ -100,3 +100,5 @@ email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t
 
 weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
+weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
