--- a/pc/user-center-provider/src/main/resources/env-dev/config.properties
+++ b/pc/user-center-provider/src/main/resources/env-dev/config.properties
@@ -41,3 +41,11 @@ cc.player.id=E92940E0788E2DAE
 
 cookieTokenName=_uc_t_
 domain=ixincheng.com
+
+#发送验证邮件，邮箱配置
+email.auth=true
+email.host=smtp.ixincheng.com
+email.user=system@ixincheng.com
+email.password=Ixincheng1234
+
+web.url=http://dev.ixincheng.com
