--- a/course-provider/pom.xml
+++ b/course-provider/pom.xml
@@ -228,6 +228,13 @@
     </dependencies>
 
     <profiles>
+    	<profile>
+            <id>dev-local</id>
+            <properties>
+                <env>env-dev-local</env>
+            </properties>
+        </profile>
+    
         <profile>
             <id>dev</id>
             <properties>
