--- a/course-provider/src/main/resources/env-dev-local/config.properties
+++ b/course-provider/src/main/resources/env-dev-local/config.properties
@@ -5,21 +5,24 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=ut
 jdbc.username=root
 jdbc.password=password
 
-#jdbc.password=D1a6t8As34iEc7oweo3Dnf
+
+jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
+#注册中心地址
 dubbo.zookepper.url=zookepper-server:2080
 #提供方的ip或者host
 dubbo.protocol.host=127.0.0.1
 #应用名称
-dubbo.app.name=user-provider
+dubbo.app.name=course-provider
 #提供服务的端口
-dubbo.protocol.port=50881
+dubbo.protocol.port=50884
 #设置duboo超时时间
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
 
 redis.host=redis-server
+#redis端口，成都(182.48.112.83)写56379，北京(172.16.1.18)写6379
 redis.port=6379
 #最大空闲连接数
 reids.maxIdle=10
@@ -27,25 +30,19 @@ reids.maxIdle=10
 reids.maxTotal=500
 #超时时间，毫秒
 reids.timeout=20000
+#密码
+redis.password=xczh_redis_prod
 
-#CC点播USERID
-cc.user.id=B5E673E55C702C42
-#CC直播USERID
-cc.live.user.id=B5E673E55C702C42
-#CC点播API KEY
-cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
-#CC直播API KEY
-cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
-#CC播放器ID
-cc.player.id=E92940E0788E2DAE
+rate=10
 
-cookieTokenName=_uc_t_
-domain=ixincheng.com
+wx.appId=wx48d230a99f1c20d9
+wx.secret=df2206fd380c36389ceccec9e8ac8f5c
 
-#发送验证邮件，邮箱配置
-email.auth=true
-email.host=smtp.ixincheng.com
-email.user=system@ixincheng.com
-email.password=Ixincheng1234
+mobile.domain=http://dev.ixincheng.com
 
-web.url=http://dev.ixincheng.com
+push.android.accessId=2100274258
+push.android.secretKey=39928f571e69f0b2a85fed843a6149cf
+push.ios.accessId=2200274259
+push.ios.secretKey=67e3827a0f46887357bf70f3c661ad87
+
+env.flag=dev
