--- a/pc/online-web/src/main/webapp/WEB-INF/web.xml
+++ b/pc/online-web/src/main/webapp/WEB-INF/web.xml
@@ -49,6 +49,25 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>	
 	
+	
+	   <!-- 拦截静态资源  -->
+	<filter>
+		<filter-name>PageVisitFilter</filter-name>
+		<filter-class>com.xczhihui.bxg.online.web.interceptor.PageVisitFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>PageVisitFilter</filter-name>
+		<!-- html、js、css 静态资源  -->
+		<url-pattern>*.js</url-pattern>
+		<url-pattern>*.html</url-pattern>
+		<url-pattern>*.css</url-pattern>
+		<url-pattern>*.jsp</url-pattern>
+		<url-pattern>*.ftl</url-pattern>
+	</filter-mapping>
+    
+	
+	
+	
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
