--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,16 @@
 
     <!-- 待聚合模块 -->
     <modules>
-        <module>../common-exception</module>
-        <module>../user-center-api</module>
-        <module>../common-util</module>
-        <module>../common-support</module>
-        <module>../common-pay</module>
-        <module>../common-web</module>
-        <module>../online-api</module>
-        <module>../online-common</module>
-        <module>../medical-api</module>
-        <module>../../course-api</module>
+        <module>./common-exception</module>
+        <module>./user-center-api</module>
+        <module>./common-util</module>
+        <module>./common-support</module>
+        <module>./common-pay</module>
+        <module>./common-web</module>
+        <module>./online-api</module>
+        <module>./online-common</module>
+        <module>./medical-api</module>
+        <module>./course-api</module>
     </modules>
 
     <dependencyManagement>
