--- a/user-center-api/pom.xml
+++ b/user-center-api/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>com.xczhihui</groupId>
 		<artifactId>root-pom</artifactId>
 		<version>2.1.0-SNAPSHOT</version>
-		<relativePath>../parent-pom</relativePath>
+		<relativePath>../</relativePath>
 	</parent>
 
 	<artifactId>user-center-api</artifactId>
