[bug fix]fix 开发环境web域名配置错误

--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -94,7 +94,7 @@ qiniu.bucket=test
 
 #熊猫币比例
 rate=10
-web.url=http://test-www.ixincheng.com
+web.url=http://test-www.xczhihui.com
 domain=xczhihui.com
 env.flag=test
 email.receiver=yuruixin@ixincheng.com
