--- a/online-web/src/main/resources/env-dev-local/config.properties
+++ b/online-web/src/main/resources/env-dev-local/config.properties
@@ -90,7 +90,7 @@ qiniu.secretKey=kpbCbnuuKFw3vWLbF5DhavDy08Jvsmyd83hgBZ9B
 qiniu.accessKey=Mc0SU4FEXmVBM33XZSxdSP2W496ntL9kDMjy3Dwi
 qiniu.prefix=http://test-file.ipandatcm.com/
 qiniu.bucket=test
-env.flag=dev
+env.flag=dev-local
 
 #熊猫币比例
 rate=10
