--- a/online-web/src/main/resources/env-dev/config.properties
+++ b/online-web/src/main/resources/env-dev/config.properties
@@ -95,7 +95,7 @@ env.flag=dev
 
 #熊猫币比例
 rate=10
-web.url=http://dev.ixincheng.com:10086
+web.url=http://dev-www.xczhihui.com
 domain=ixincheng.com
 email.receiver=yuruixin@ixincheng.com
 cookieTokenName=_uc_t_dev
