--- a/course-provider/src/main/resources/env-dev-local/config.properties
+++ b/course-provider/src/main/resources/env-dev-local/config.properties
@@ -1,12 +1,8 @@
 #++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=password
-
-
-jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
 #注册中心地址
@@ -45,4 +41,4 @@ push.android.secretKey=39928f571e69f0b2a85fed843a6149cf
 push.ios.accessId=2200274259
 push.ios.secretKey=67e3827a0f46887357bf70f3c661ad87
 
-env.flag=dev
+env.flag=dev-local
