--- a/user-center-provider/src/main/resources/env-dev/config.properties
+++ b/user-center-provider/src/main/resources/env-dev/config.properties
@@ -1,10 +1,7 @@
 #++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-#jdbc.password=root
-
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
@@ -39,13 +36,10 @@ cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 #CC播放器ID
 cc.player.id=E92940E0788E2DAE
 
-cookieTokenName=_uc_t_
-domain=ixincheng.com
-
 #发送验证邮件，邮箱配置
 email.auth=true
 email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
 email.password=Ixincheng1234
 
-web.url=http://dev.ixincheng.com
+web.url=http://dev-www.xczhihui.com
