--- a/wechat/src/main/resources/env-dev-local/config.properties
+++ b/wechat/src/main/resources/env-dev-local/config.properties
@@ -122,9 +122,7 @@ email.user=system@ixincheng.com
 email.password=Ixincheng1234
 
 #cookie配置
-env.flag=test
-cookieTokenName=_uc_t_
-domain=ixincheng.com
+env.flag=dev-local
 
 #熊猫币比例
 rate=10
