--- a/wechat/src/main/resources/env-dev/config.properties
+++ b/wechat/src/main/resources/env-dev/config.properties
@@ -1,9 +1,7 @@
 #++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-#jdbc.password=root
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #c3p0连接池配置：
@@ -124,9 +122,7 @@ email.user=system@ixincheng.com
 email.password=Ixincheng1234
 
 #cookie配置
-env.flag=test
-cookieTokenName=_uc_t_
-domain=ixincheng.com
+env.flag=dev
 
 #熊猫币比例
 rate=10
