[bug fix]fix 专辑更新时间保存以及前台展示 bug

--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -84,10 +84,14 @@ sms.live.course.remind.code=SMS_135029123
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
 #您的专辑课程《${courseName}》需要更新啦~您可登录www.ipandatcm.com中主播工作台进行操作
-sms.update.course.remind.code=sms.update.course.remind.code
+sms.update.course.remind.code=SMS_135043132
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
 
 weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
 weixin.course.apply.not.pass.code=HQvCPVxmHhHfpNYI3CxNPOGiyx2tQjCEOsbL-B-j6J8
+
+weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
+weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
