--- a/online-manager/src/main/resources/env-dev-local/config.properties
+++ b/online-manager/src/main/resources/env-dev-local/config.properties
@@ -3,7 +3,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.url=jdbc:mysql://127.0.0.1:3306/online?zeroDateTimeBehavior=convertToNull&autoReconnect=true
 jdbc.username=root
-jdbc.password=root
+jdbc.password=password
 #jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
@@ -85,10 +85,13 @@ sms.live.course.remind.code=SMS_135029198
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
 #您的专辑课程《${courseName}》需要更新啦~您可登录www.ipandatcm.com中主播工作台进行操作
-sms.update.course.remind.code=sms.update.course.remind.code
+sms.update.course.remind.code=SMS_135043132
 
+weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
-
 
 weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
 weixin.course.apply.not.pass.code=HQvCPVxmHhHfpNYI3CxNPOGiyx2tQjCEOsbL-B-j6J8
+
+weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
+weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
