修改首页跳转

--- a/online-web/src/main/webapp/WEB-INF/web.xml
+++ b/online-web/src/main/webapp/WEB-INF/web.xml
@@ -91,7 +91,7 @@
 		<location>/error/500.html</location>
 	</error-page>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 	
 	<session-config>
