修改ios版本号

--- a/wechat/src/main/resources/env-prod/config.properties
+++ b/wechat/src/main/resources/env-prod/config.properties
@@ -132,3 +132,5 @@ minimum_amount=0.01
 #  审核中时也应该用 沙盒环境，如果审核成功，用户可以下载的时候，就可以换成真实的啦
 #iphone.iap.url=https://sandbox.itunes.apple.com/verifyReceipt
 iphone.iap.url=https://buy.itunes.apple.com/verifyReceipt
+
+ios.check.version=2.0.4
