[bug fix]fix 测试环境域名更换

--- a/course-provider/src/main/resources/env-test/config.properties
+++ b/course-provider/src/main/resources/env-test/config.properties
@@ -35,7 +35,7 @@ rate=10
 wx.appId=wx48d230a99f1c20d9
 wx.secret=df2206fd380c36389ceccec9e8ac8f5c
 
-mobile.domain=http://test-wx.ixincheng.com
+mobile.domain=http://test-wx.xczhihui.com
 
 push.android.accessId=2100274258
 push.android.secretKey=39928f571e69f0b2a85fed843a6149cf
