--- a/online-manager/src/main/resources/env-dev-local/config.properties
+++ b/online-manager/src/main/resources/env-dev-local/config.properties
@@ -3,7 +3,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://47.92.25.236:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.url=jdbc:mysql://127.0.0.1:3306/online?zeroDateTimeBehavior=convertToNull&autoReconnect=true
 jdbc.username=root
-jdbc.password=password
+jdbc.password=root
 #jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
