--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -1,7 +1,7 @@
 #++++++++++++++++++++++++++++++++++++++++++++++测试环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://172.26.108.182:3306/online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
+jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73.mysql.zhangbei.rds.aliyuncs.com:3306/test_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.username=troot
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #c3p0连接池配置：
