--- a/online-web/src/main/resources/env-dev/config.properties
+++ b/online-web/src/main/resources/env-dev/config.properties
@@ -1,6 +1,6 @@
 ﻿#++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73oo.mysql.zhangbei.rds.aliyuncs.com:3306/dev_online?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73oo.mysql.zhangbei.rds.aliyuncs.com:3306/dev_online?zeroDateTimeBehavior=convertToNull
 jdbc.username=troot
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
