--- a/wechat/src/main/resources/env-dev-local/config.properties
+++ b/wechat/src/main/resources/env-dev-local/config.properties
@@ -76,7 +76,7 @@ wxToken=xxxxxxxxxxxxxxxx
 
 
 returnOpenidUri=http:/dev-www.ixincheng.com:8888
-webdomain=http:/dev-www.ixincheng.com
+webdomain=http://dev-www.ixincheng.com
 #服务器ip 微信支付使用
 server_ip=47.92.25.236
 
