增加微信端错误页面

--- a/wechat/src/main/webapp/WEB-INF/web.xml
+++ b/wechat/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,16 @@
         <session-timeout>10080</session-timeout>
     </session-config>
 
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/xcview/html/home_page.html</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/xcview/html/home_page.html</location>
+	</error-page>
+	
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
