修改异常信息邮箱配置

--- a/online-manager/src/main/resources/env-dev-local/config.properties
+++ b/online-manager/src/main/resources/env-dev-local/config.properties
@@ -35,7 +35,7 @@ qiniu.bucket=test
 email.auth=true
 email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
-email.password=Ixincheng1234
+email.password=Ixincheng123456
 
 # 点播课分成比例
 course.anchor.vod.divide = 0
