--- a/online-web/src/main/resources/env-dev-local/config.properties
+++ b/online-web/src/main/resources/env-dev-local/config.properties
@@ -47,7 +47,7 @@ dubbo.provider.timeout=15000
 email.auth=true
 email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
-email.password=Ixincheng1234
+email.password=Ixincheng123456
 
 redis.host=redis-server
 redis.port=6379
