--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -116,7 +116,7 @@ reids.timeout=20000
 email.auth=true
 email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
-email.password=Ixincheng1234
+email.password=Ixincheng123456
 
 #cookie配置
 env.flag=test
