--- a/user-center-provider/src/main/resources/env-dev/config.properties
+++ b/user-center-provider/src/main/resources/env-dev/config.properties
@@ -40,6 +40,6 @@ cc.player.id=E92940E0788E2DAE
 email.auth=true
 email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
-email.password=Ixincheng1234
+email.password=Ixincheng123456
 
 web.url=http://dev-www.xczhihui.com
