--- a/wechat/src/main/webapp/WEB-INF/web.xml
+++ b/wechat/src/main/webapp/WEB-INF/web.xml
@@ -78,6 +78,10 @@
 		<error-code>500</error-code>
 		<location>/xcview/html/home_page.html</location>
 	</error-page>
+	<error-page>
+		<error-code>400</error-code>
+		<location>/xcview/html/home_page.html</location>
+	</error-page>
 	
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
