修改配置文件中域名

--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -54,8 +54,8 @@ wechatpay.h5.appid=wx48d230a99f1c20d9
 wechatpay.h5.secret=df2206fd380c36389ceccec9e8ac8f5c
 
 #其他配置
-web.url=http://test-www.ixincheng.com
-mobile.domain=http://test-wx.ixincheng.com
+web.url=http://test-www.xczhihui.com
+mobile.domain=http://test-wx.xczhihui.com
 env.flag=test
 domain=ixincheng.com
 cookieTokenName=_uc_t_manager_test
