--- a/common-pay/pom.xml
+++ b/common-pay/pom.xml
@@ -50,13 +50,7 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.alibaba</groupId>-->
-			<!--<artifactId>alipay-sdk-java</artifactId>-->
-			<!--<version>java20171012102412</version>-->
-			<!--<scope>system</scope>-->
-			<!--<systemPath>${project.basedir}/libs/alipay-sdk-java20180309170622.jar</systemPath>-->
-		<!--</dependency>-->
+		<!--mvn install:install-file -Dfile=D:\Documents\xmzy\common-pay\lib\alipay-sdk-java20180309170622.jar -DgroupId=com.alibaba -DartifactId=alipay -Dversion=12.2 -Dpackaging=jar-->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>alipay</artifactId>
@@ -70,21 +64,6 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>log4j</groupId>-->
-			<!--<artifactId>log4j</artifactId>-->
-			<!--<version>1.2.17</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-api</artifactId>-->
-			<!--<version>1.7.25</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-log4j12</artifactId>-->
-			<!--<version>1.7.25</version>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
