[bug fix]fix 消息bug

--- a/course-provider/src/main/resources/env-test/config.properties
+++ b/course-provider/src/main/resources/env-test/config.properties
@@ -43,3 +43,5 @@ push.ios.accessId=2200293451
 push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
 
 env.flag=test
+
+weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
