solr doctors init query

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>./common-util</module>
         <module>./common-support</module>
         <module>./common-pay</module>
+        <module>./common-solr</module>
         <module>./common-web</module>
         <module>./online-api</module>
         <module>./online-common</module>
