--- a/common-solr/pom.xml
+++ b/common-solr/pom.xml
@@ -36,5 +36,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
