--- a/online-manager/pom.xml
+++ b/online-manager/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>course-api</artifactId>
             <version>2.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>medical-api</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
