--- a/medical-provider/src/main/resources/env-dev/config.properties
+++ b/medical-provider/src/main/resources/env-dev/config.properties
@@ -37,8 +37,8 @@ cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 cc.player.id=E92940E0788E2DAE
 
 #服务器地址
-solr.url=http://127.0.0.1:8983/solr
-#url=http://47.92.25.236:8848/solr
+#solr.url=http://127.0.0.1:8983/solr
+solr.url=http://47.92.25.236:8848/solr
 #高亮前缀
 solr.heiht.pre=<span style="color: red">
 #高亮后缀
