--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -80,5 +80,22 @@
             <artifactId>weixin-java-mp</artifactId>
             <version>3.0.0</version>
         </dependency>
+        
+        
+        <!-- qq分享使用 -->
+        <!-- https://mvnrepository.com/artifact/net.gplatform/Sdk4J -->
+        <dependency>
+            <groupId>net.gplatform</groupId>
+            <artifactId>Sdk4J</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!-- 微博分享使用  -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>weibo4j-oauth2</artifactId>
+            <version>2.1.1-beta2-2</version>
+        </dependency>
+        
     </dependencies>
 </project>
