完善下第三方登录对bean类的封装

--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -97,5 +97,10 @@
             <version>2.1.1-beta2-2</version>
         </dependency>
         
+         <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-util</artifactId>
+        </dependency>
+        
     </dependencies>
 </project>
