--- a/course-provider/pom.xml
+++ b/course-provider/pom.xml
@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>com.xczhihui</groupId>
+        <artifactId>root-pom</artifactId>
+        <version>2.2.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>com.xczhihui</groupId>
     <artifactId>course-provider</artifactId>
     <packaging>war</packaging>
@@ -26,12 +33,10 @@
         <dependency>
             <groupId>com.xczhihui</groupId>
             <artifactId>common-support</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.xczhihui</groupId>
             <artifactId>course-api</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
         </dependency>
 
 
