--- a/user-center-provider/pom.xml
+++ b/user-center-provider/pom.xml
@@ -2,6 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.xczhihui</groupId>
+		<artifactId>root-pom</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.xczhihui</groupId>
 	<artifactId>user-center-provider</artifactId>
 	<packaging>war</packaging>
@@ -28,12 +34,10 @@
 		<dependency>
 			<groupId>com.xczhihui</groupId>
 			<artifactId>common-support</artifactId>
-			<version>2.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.xczhihui</groupId>
 			<artifactId>user-center-api</artifactId>
-			<version>2.2.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- JUnit -->
