course query   solr  init

--- a/course-provider/src/main/resources/env-dev-local/config.properties
+++ b/course-provider/src/main/resources/env-dev-local/config.properties
@@ -1,8 +1,8 @@
 #++++++++++++++++++++++++++++++++++++++++++++++开发环境++++++++++++++++++++++++++++++++++++++++++++++
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/online?zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73oo.mysql.zhangbei.rds.aliyuncs.com:3306/dev_online?zeroDateTimeBehavior=convertToNull
+jdbc.username=troot
+jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
 #dubbo配置：
 #注册中心地址
@@ -44,3 +44,11 @@ push.ios.secretKey=ddfcb8d810f388726bf3ab023bdbe5d4
 env.flag=dev-local
 
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+
+#服务器地址
+solr.url=http://127.0.0.1:8983/solr
+#高亮前缀
+solr.heiht.pre=<span style="color: red">
+#高亮后缀
+solr.heiht.post=</span>
+solr.core = courses
