--- a/course-provider/src/main/resources/env-test/config.properties
+++ b/course-provider/src/main/resources/env-test/config.properties
@@ -45,3 +45,11 @@ push.ios.secretKey=ddfcb8d810f388726bf3ab023bdbe5d4
 env.flag=test
 
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+
+#服务器地址
+solr.url=http://172.26.108.182:8848/solr
+#高亮前缀
+solr.heiht.pre=<span style="color: red">
+#高亮后缀
+solr.heiht.post=</span>
+solr.core = courses
