--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -22,6 +22,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-solr</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-exception</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
@@ -55,10 +64,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.xczhihui</groupId>
-            <artifactId>common-exception</artifactId>
         </dependency>
 
         <!-- cache -->
