--- a/course-provider/src/main/resources/env-dev/config.properties
+++ b/course-provider/src/main/resources/env-dev/config.properties
@@ -44,3 +44,11 @@ push.ios.secretKey=ddfcb8d810f388726bf3ab023bdbe5d4
 env.flag=dev
 
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+
+#服务器地址
+solr.url=http://221.182.185.52:8848/solr
+#高亮前缀
+solr.heiht.pre=<span style="color: red">
+#高亮后缀
+solr.heiht.post=</span>
+solr.core = courses
