--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -44,3 +44,12 @@ push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
 env.flag=prod
 
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+
+#服务器地址
+#solr.url=http://127.0.0.1:8983/solr
+solr.url=http://221.182.185.52:8848/solr
+#高亮前缀
+solr.heiht.pre=<span style="color: red">
+#高亮后缀
+solr.heiht.post=</span>
+solr.core = courses
