--- a/online-manager/pom.xml
+++ b/online-manager/pom.xml
@@ -321,7 +321,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <warName>${project.artifactId}-${project.version}</warName>
+                    <warName>${project.artifactId}</warName>
                     <filters>
                         <filter>src/main/resources/${env}/config.properties</filter>
                     </filters>
