修改打包名称

--- a/online-manager/pom.xml
+++ b/online-manager/pom.xml
@@ -267,6 +267,7 @@
     </profiles>
 
     <build>
+        <finalName>online-manager</finalName>
         <plugins>
             <!-- 设置源文件编码方 -->
             <plugin>
