--- a/online-web/pom.xml
+++ b/online-web/pom.xml
@@ -309,6 +309,7 @@
     </profiles>
 
     <build>
+        <finalName>online-web</finalName>
         <plugins>
             <!-- 设置源文件编码方 -->
             <plugin>
