--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -329,6 +329,7 @@
     </profiles>
 
     <build>
+        <finalName>wechat</finalName>
         <plugins>
             <!-- 设置源文件编码方 -->
             <plugin>
