[enhancement]更新微信模板消息配置以及修改课程审核bug

--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -87,11 +87,9 @@ sms.offline.course.remind.code=SMS_135041783
 sms.update.course.remind.code=SMS_135043132
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
-weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
-weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
+weixin.anchor.approve.pass.code=FFMhaPc_u7_5UiPM55HntZtTXNOzO-vJebScPW_fhyk
 
-weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
-weixin.course.apply.not.pass.code=MxjG91sUtiW0gQN6kucni69ckTh8xb9azUGMUQ7Si2Q
+weixin.course.admin.apply.code=7M0owccIOrMu2gVuJmSRx9GXhd0eEu-l4c12xA5zY_s
 
-weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
-weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
+weixin.enchashment.pass.code=rgizW5ohNTicAme6Xk7Kcu-vfP0GKgGUHmpjmbg4M6I
+weixin.enchashment.not.pass.code=sbjL0u0CZPrW-UzxU6IGxwaCYMbqTA-Ine8OFJ_QjTM
