--- a/online-manager/src/main/resources/env-dev/config.properties
+++ b/online-manager/src/main/resources/env-dev/config.properties
@@ -86,10 +86,8 @@ sms.offline.course.remind.code=SMS_135041783
 sms.update.course.remind.code=SMS_135043132
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
-weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
 
-weixin.course.apply.pass.code=dZkp_t9OgThi4JJs6SPiKwFWqLcfxOcgu5sqN5wWz-s
-weixin.course.apply.not.pass.code=MxjG91sUtiW0gQN6kucni69ckTh8xb9azUGMUQ7Si2Q
+weixin.course.admin.apply.code=MxjG91sUtiW0gQN6kucni69ckTh8xb9azUGMUQ7Si2Q
 
 weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
 weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
