[bug fix]fix 微信模板消息文案

--- a/online-manager/src/main/resources/env-dev-local/config.properties
+++ b/online-manager/src/main/resources/env-dev-local/config.properties
@@ -88,6 +88,7 @@ sms.offline.course.remind.code=SMS_135041783
 sms.update.course.remind.code=SMS_135043132
 
 weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
+weixin.anchor.approve.not.pass.code=VQIFb8GogwSCncJwGCNCOXtESnFAnw9L6z2ncJ1HHkM
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 
 weixin.course.admin.apply.code=MxjG91sUtiW0gQN6kucni69ckTh8xb9azUGMUQ7Si2Q
