--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -88,6 +88,7 @@ sms.update.course.remind.code=SMS_135043132
 
 weixin.course.remind.code=0jWjddyjHAz27bIB3fresOMzWj0nNrUt8wel7A-BRYo
 weixin.anchor.approve.pass.code=FFMhaPc_u7_5UiPM55HntZtTXNOzO-vJebScPW_fhyk
+weixin.anchor.approve.not.pass.code=plz4gp_6b_EJkDZ0nrI59cpSxeSr94_mibcp0o-SHH0
 
 weixin.course.admin.apply.code=7M0owccIOrMu2gVuJmSRx9GXhd0eEu-l4c12xA5zY_s
 
