--- a/medical-provider/src/main/resources/env-dev/config.properties
+++ b/medical-provider/src/main/resources/env-dev/config.properties
@@ -44,3 +44,6 @@ solr.heiht.pre=<span style="color: red">
 #高亮后缀
 solr.heiht.post=</span>
 solr.core = doctors
+
+online.apprentice.apply.success.sms.code=SMS_139244349
+online.apprentice.apply.fail.sms.code=SMS_139229517
