--- a/medical-provider/src/main/resources/env-prod/config.properties
+++ b/medical-provider/src/main/resources/env-prod/config.properties
@@ -47,3 +47,6 @@ solr.core = doctors
 
 online.apprentice.apply.success.sms.code=SMS_139244349
 online.apprentice.apply.fail.sms.code=SMS_139229517
+
+online.treatment.apply.success.sms.code=SMS_139976012
+online.treatment.apply.fail.sms.code=SMS_139971008
