[fix]解决提前发起直播，无法观看问题

--- a/online-manager/src/main/resources/env-dev/config.properties
+++ b/online-manager/src/main/resources/env-dev/config.properties
@@ -21,7 +21,7 @@ cc.player.id=E92940E0788E2DAE
 #微吼
 vhall.user.id=20604829
 vhall.private.key=xinchengzhihui_private_key
-vhall.callback.url=http://test-www.ixincheng.com:28080/publiccloudclass/course/changeCallback
+vhall.callback.url=http://test-www.xczhihui.com:28080/publiccloudclass/course/changeCallback
 
 #七牛
 qiniu.secretKey=kpbCbnuuKFw3vWLbF5DhavDy08Jvsmyd83hgBZ9B
