--- a/medical-provider/src/main/resources/env-test/config.properties
+++ b/medical-provider/src/main/resources/env-test/config.properties
@@ -51,3 +51,4 @@ online.apprentice.apply.fail.sms.code=SMS_139229517
 
 online.treatment.apply.success.sms.code=SMS_139976012
 online.treatment.apply.fail.sms.code=SMS_139971008
+online.treatment.apply.cancel.sms.code=SMS_140730221
