[fix]七牛域名更换为https

--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -27,7 +27,7 @@ vhall.callback.url=http://test-www.xczhihui.com:28080/publiccloudclass/course/ch
 #七牛
 qiniu.secretKey=kpbCbnuuKFw3vWLbF5DhavDy08Jvsmyd83hgBZ9B
 qiniu.accessKey=Mc0SU4FEXmVBM33XZSxdSP2W496ntL9kDMjy3Dwi
-qiniu.prefix=http://test-file.ipandatcm.com/
+qiniu.prefix=https://file.xczhihui.com/
 qiniu.bucket=test
 
 #发送验证邮件，邮箱配置
