--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -90,7 +90,7 @@ gift.im.boshService=http://47.92.25.236:5280/http-bind/
 #七牛配置
 qiniu.secretKey=kpbCbnuuKFw3vWLbF5DhavDy08Jvsmyd83hgBZ9B
 qiniu.accessKey=Mc0SU4FEXmVBM33XZSxdSP2W496ntL9kDMjy3Dwi
-qiniu.prefix=http://test-file.ipandatcm.com/
+qiniu.prefix=https://file.xczhihui.com/
 qiniu.bucket=test
 
 #熊猫币比例
