新增消息推送接口

--- a/course-provider/src/main/resources/env-dev-local/config.properties
+++ b/course-provider/src/main/resources/env-dev-local/config.properties
@@ -44,6 +44,7 @@ push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
 env.flag=dev-local
 
 weixin.course.apply.code=oUdsQRRRTugfS1hSo6b1hFdfPiKIRTCgBF0-jfgwC5I
+weixin.course.remind.code=u3oPlF212ELKH6TVypCmZveiUfbV1myCm5Na19CGeZk
 
 #服务器地址
 solr.url=http://127.0.0.1:8983/solr
