--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -44,6 +44,7 @@ push.ios.secretKey=79879a73bf7f74de3f1909804f00bc03
 env.flag=prod
 
 weixin.course.apply.code=C27Q7cIKRukJWxMvM5pTKU8_maZgjyDCGb4M6D-lyM0
+weixin.course.remind.code=u3oPlF212ELKH6TVypCmZveiUfbV1myCm5Na19CGeZk
 
 #服务器地址
 solr.url=http://127.0.0.1:8848/solr
