[fix]http://test-www.xczhihui.com ==> https://cs.xczhihui.com

--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -22,7 +22,7 @@ cc.player.id=E92940E0788E2DAE
 #微吼
 vhall.user.id=20604829
 vhall.private.key=xinchengzhihui_private_key
-vhall.callback.url=http://test-www.xczhihui.com:28080/publiccloudclass/course/changeCallback
+vhall.callback.url=https://cs.xczhihui.com:28080/publiccloudclass/course/changeCallback
 
 #七牛
 qiniu.secretKey=kpbCbnuuKFw3vWLbF5DhavDy08Jvsmyd83hgBZ9B
@@ -54,7 +54,7 @@ wechatpay.h5.appid=wx48d230a99f1c20d9
 wechatpay.h5.secret=df2206fd380c36389ceccec9e8ac8f5c
 
 #其他配置
-web.url=http://test-www.xczhihui.com
+web.url=https://cs.xczhihui.com
 mobile.domain=http://test-wx.xczhihui.com
 env.flag=test
 domain=ixincheng.com
