--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -65,7 +65,7 @@ cc.live.user.id=B5E673E55C702C42
 cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 cc.player.id=E92940E0788E2DAE
-cc.uploadCallback.url=http://test-www.xczhihui.com/videoRes/updateCourseApplyResource
+cc.uploadCallback.url=https://cs.xczhihui.com/videoRes/updateCourseApplyResource
 
 #微信支付配置
 wechat.app.id=wx48d230a99f1c20d9
@@ -95,7 +95,7 @@ qiniu.bucket=test
 
 #熊猫币比例
 rate=10
-web.url=http://test-www.xczhihui.com
+web.url=https://cs.xczhihui.com
 env.flag=test
 email.receiver=yuruixin@ixincheng.com
 
