--- a/user-center-provider/src/main/resources/env-test/config.properties
+++ b/user-center-provider/src/main/resources/env-test/config.properties
@@ -42,4 +42,4 @@ email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
 email.password=Ixincheng123456
 
-web.url=http://test-www.xczhihui.com
+web.url=https://cs.xczhihui.com
