--- a/wechat/src/main/resources/env-prod/config.properties
+++ b/wechat/src/main/resources/env-prod/config.properties
@@ -95,7 +95,7 @@ gift.im.boshService=http://47.92.39.21:5280/http-bind/
 ##  微博   第三方配置信息
 client_ID=3775566632
 client_SERCRET=f3e74de98e29f5af6737d3c3a489b456
-redirect_URI=http://test-www.xczhihui.com/
+redirect_URI=https://cs.xczhihui.com/
 baseURL=https://api.weibo.com/2/
 accessTokenURL=https://api.weibo.com/oauth2/access_token
 #	pc使用
