--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -73,7 +73,7 @@ wxToken=xxxxxxxxxxxxxxxx
 
 
 returnOpenidUri=https://cs.m.xczhihui.com
-webdomain=http://test-www.xczhihui.com
+webdomain=https://cs.xczhihui.com
 #服务器ip 微信支付使用
 server_ip=47.92.25.236
 
