[fix]http://www.ipandatcm.com ==>https://www.ipandatcm.com

--- a/online-web/src/main/resources/env-prod/config.properties
+++ b/online-web/src/main/resources/env-prod/config.properties
@@ -64,7 +64,7 @@ cc.live.user.id=B5E673E55C702C42
 cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 cc.player.id=E92940E0788E2DAE
-cc.uploadCallback.url=http://www.ipandatcm.com/videoRes/updateCourseApplyResource
+cc.uploadCallback.url=https://www.ipandatcm.com/videoRes/updateCourseApplyResource
 
 #微信支付配置
 wechat.app.id=wx81c7ce773415e00a
@@ -94,7 +94,7 @@ qiniu.bucket=ipandatcm
 
 #熊猫币比例
 rate=10
-web.url=http://www.ipandatcm.com
+web.url=https://www.ipandatcm.com
 env.flag=prod
 email.receiver=yuruixin@ixincheng.com
 
