--- a/wechat/src/main/resources/env-prod/config.properties
+++ b/wechat/src/main/resources/env-prod/config.properties
@@ -78,7 +78,7 @@ wxToken=xxxxxxxxxxxxxxxx
 # 微信相关 -  end
 
 returnOpenidUri=http://m.ipandatcm.com
-webdomain=http://www.ipandatcm.com
+webdomain=https://www.ipandatcm.com
 server_ip=47.92.39.21
 
 
