--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -54,7 +54,7 @@ wechatpay.h5.appid=wx81c7ce773415e00a
 wechatpay.h5.secret=b17cdd54ce4c35420a9e7782d7a27fa7
 
 #其他配置
-web.url=http://www.ipandatcm.com
+web.url=https://www.ipandatcm.com
 mobile.domain=http://m.ipandatcm.com
 env.flag=prod
 domain=ipandatcm.com
