--- a/user-center-provider/src/main/resources/env-prod/config.properties
+++ b/user-center-provider/src/main/resources/env-prod/config.properties
@@ -42,4 +42,4 @@ email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
 email.password=Ixincheng123456
 
-web.url=http://www.ipandatcm.com
+web.url=https://www.ipandatcm.com
