[fix]http://m.ipandatcm.com ==>https://m.ipandatcm.com

--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -34,7 +34,7 @@ rate=10
 wx.appId=wx81c7ce773415e00a
 wx.secret=b17cdd54ce4c35420a9e7782d7a27fa7
 
-mobile.domain=http://m.ipandatcm.com
+mobile.domain=https://m.ipandatcm.com
 
 push.android.accessId=2100293709
 push.android.secretKey=b9d210a6b7af7243d3a8363b5d3b1c70
