--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -55,7 +55,7 @@ wechatpay.h5.secret=b17cdd54ce4c35420a9e7782d7a27fa7
 
 #其他配置
 web.url=https://www.ipandatcm.com
-mobile.domain=http://m.ipandatcm.com
+mobile.domain=https://m.ipandatcm.com
 env.flag=prod
 domain=ipandatcm.com
 cookieTokenName=_uc_t_manager
